--- a/styles/scss/_tabs.scss
+++ b/styles/scss/_tabs.scss
@@ -4,10 +4,13 @@
     .ui-tabs .cms-content-header-tabs .ui-tabs-nav {
         border-left: none;
         .ui-state-default {
-            background: transparent;
+            background: #ced7dc;
+            border-color: #ced7dc;
             outline: none;
-            border: none;
+            border-left: none;
+            border-right: none;
             box-shadow: none;
+            border-top: 1px solid transparent;
             a {
                 color: #000;
                 text-shadow: none;
