--- a/styles/css/flat-cms.css
+++ b/styles/css/flat-cms.css
@@ -36,6 +36,9 @@
 .cms .ui-button-text-icon-primary .ui-button-text, .cms .ui-button-text-icons .ui-button-text {
   padding: .4em 1em; }
 
+.cms .ss-ui-button.ss-ui-action-destructive {
+  color: white; }
+
 .cms #Root_Main [type="radio"]:not(:checked),
 .cms #Root_Main [type="radio"]:checked, .cms .cms-content-fields [type="radio"]:not(:checked),
 .cms .cms-content-fields [type="radio"]:checked, .cms .cms-panel-content [type="radio"]:not(:checked),
@@ -670,7 +673,6 @@ html .cms .icon {
   color: #fff;
   width: 240px !important;
   box-shadow: none;
-  border-right: 1px solid rgba(0, 0, 0, 0.3);
   box-shadow: none; }
   .cms .cms-menu.collapsed {
     width: 46px !important; }
@@ -680,12 +682,13 @@ html .cms .icon {
       opacity: 0; }
 
 .cms .cms-menu-list li a {
-  margin: 2px;
+  margin: 2px 0;
   text-shadow: none;
   background: none;
   border-top: 0;
   border-bottom: 0;
-  color: white; }
+  color: white;
+  font-weight: 300; }
   .cms .cms-menu-list li a:hover {
     text-decoration: none;
     border-bottom: 0; }
@@ -709,8 +712,19 @@ html .cms .icon {
 .cms .cms-menu-list li.current a {
   text-shadow: none;
   border-top: 0;
-  border-bottom: 0;
-  font-weight: 500; }
+  border-bottom: 0; }
+  .cms .cms-menu-list li.current a:after {
+    content: '';
+    position: absolute;
+    right: -2px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #eceff1 transparent transparent; }
 
 .cms .cms-menu-list li.current ul {
   border-top: none;
