--- a/styles/scss/_left-menu.scss
+++ b/styles/scss/_left-menu.scss
@@ -57,7 +57,6 @@
         color: #fff;
         width: 240px !important;
         box-shadow: none;
-        border-right: 1px solid rgba(0, 0, 0, 0.3);
         box-shadow: none;
         &.collapsed {
             .cms-menu-list li {
@@ -72,21 +71,13 @@
     .cms-menu-list {
         li {
             a {
-                margin: 2px;
+                margin: 2px 0;
                 text-shadow: none;
                 background: none;
                 border-top: 0;
                 border-bottom: 0;
                 color: white;
-                &:after {
-                    content: '';
-                    position: absolute;
-                    background: #eceff1;
-                    right: 0;
-                    width: 10px;
-                    height: 10px;
-                    display: block;
-                }
+                font-weight: 300;
                 &:hover {
                     text-decoration: none;
                     border-bottom: 0;
@@ -96,6 +87,7 @@
                     border-top: 0;
                     text-decoration: none;
                 }
+
                 .icon {
                     opacity: 1;
                     width: 18px;
@@ -118,7 +110,18 @@
                     text-shadow: none;
                     border-top: 0;
                     border-bottom: 0;
-                    font-weight: 500;
+                    &:after {
+                        content: '';
+                        position: absolute;
+                        right: -2px;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        width: 0;
+                        height: 0;
+                        border-style: solid;
+                        border-width: 10px 10px 10px 0;
+                        border-color: transparent #eceff1 transparent transparent;
+                    }
                 }
                 ul {
                     border-top: none;
