--- a/styles/css/flat-cms.css
+++ b/styles/css/flat-cms.css
@@ -39,6 +39,30 @@
 .cms .ss-ui-button.ss-ui-action-destructive {
   color: white; }
 
+#Form_EditForm_action_save,
+#Form_EditForm_action_publish {
+  outline: none; }
+  #Form_EditForm_action_save.loading:after,
+  #Form_EditForm_action_publish.loading:after {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    content: 'Publishing...';
+    background: #23282d;
+    border: 1px solid #23282d;
+    color: white;
+    text-align: center;
+    display: block;
+    line-height: 27px;
+    text-shadow: none; }
+
+#Form_EditForm_action_save {
+  outline: none; }
+  #Form_EditForm_action_save.loading:after {
+    content: 'Saving...'; }
+
 .cms #Root_Main [type="radio"]:not(:checked),
 .cms #Root_Main [type="radio"]:checked, .cms .cms-content-fields [type="radio"]:not(:checked),
 .cms .cms-content-fields [type="radio"]:checked, .cms .cms-panel-content [type="radio"]:not(:checked),
