Added in new video icon for the tinymce (re: quicksilver) Updated SourceTree icon

--- a/styles/css/flat-cms.css
+++ b/styles/css/flat-cms.css
@@ -1139,6 +1139,9 @@ html .cms .icon {
 .cms .mce_pastetext:after {
   content: '\e14f'; }
 
+.cms .mce_youtube:after {
+  content: '\e04b'; }
+
 .cms .togglecomposite {
   border-radius: 0;
   border: 0;
