--- a/styles/scss/_tiny_mce.scss
+++ b/styles/scss/_tiny_mce.scss
@@ -165,7 +165,9 @@
     .mce_pastetext:after {
         content: '\e14f';
     }
-
+    .mce_youtube:after {
+        content: '\e04b';
+    }
 }
 
 
